--- a/MovieRentals.csproj
+++ b/MovieRentals.csproj
@@ -274,10 +274,15 @@
     <Compile Include="Migrations\202005032211409_MovieActor_fix.Designer.cs">
       <DependentUpon>202005032211409_MovieActor_fix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005062310081_model_fix_migration.cs" />
+    <Compile Include="Migrations\202005062310081_model_fix_migration.Designer.cs">
+      <DependentUpon>202005062310081_model_fix_migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Actor.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\min18yrsIfMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -285,6 +290,7 @@
     <Compile Include="Models\MovieActors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ActorViewModel.cs" />
     <Compile Include="ViewModels\AddActorViewModel.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
   </ItemGroup>
@@ -446,6 +452,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005032211409_MovieActor_fix.resx">
       <DependentUpon>202005032211409_MovieActor_fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005062310081_model_fix_migration.resx">
+      <DependentUpon>202005062310081_model_fix_migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
