--- a/MovieRentals.csproj
+++ b/MovieRentals.csproj
@@ -184,13 +184,16 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ActorController.cs" />
+    <Compile Include="Controllers\API\ActorController.cs" />
     <Compile Include="Controllers\API\CustomersController.cs" />
     <Compile Include="Controllers\ApplaicationDbContext.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="DTOs\ActorDTO.cs" />
     <Compile Include="DTOs\CustomerDTO.cs" />
+    <Compile Include="DTOs\MovieDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -294,6 +297,14 @@
     <Compile Include="Migrations\202005062310081_model_fix_migration.Designer.cs">
       <DependentUpon>202005062310081_model_fix_migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006021540014_CustomerMovie.cs" />
+    <Compile Include="Migrations\202006021540014_CustomerMovie.Designer.cs">
+      <DependentUpon>202006021540014_CustomerMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202006021611006_CustomerMovie1.cs" />
+    <Compile Include="Migrations\202006021611006_CustomerMovie1.Designer.cs">
+      <DependentUpon>202006021611006_CustomerMovie1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Actor.cs" />
@@ -304,10 +315,12 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MovieActors.cs" />
+    <Compile Include="Models\MovieCustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ActorViewModel.cs" />
     <Compile Include="ViewModels\AddActorViewModel.cs" />
+    <Compile Include="ViewModels\CustomerViewModel.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -471,6 +484,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005062310081_model_fix_migration.resx">
       <DependentUpon>202005062310081_model_fix_migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006021540014_CustomerMovie.resx">
+      <DependentUpon>202006021540014_CustomerMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006021611006_CustomerMovie1.resx">
+      <DependentUpon>202006021611006_CustomerMovie1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
