--- a/MovieRentals.csproj
+++ b/MovieRentals.csproj
@@ -187,16 +187,19 @@
     <Compile Include="Controllers\API\ActorController.cs" />
     <Compile Include="Controllers\API\CustomersController.cs" />
     <Compile Include="Controllers\API\MoviesController.cs" />
+    <Compile Include="Controllers\API\NewRentalsController.cs" />
     <Compile Include="Controllers\ApplaicationDbContext.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
+    <Compile Include="Controllers\RentalsController.cs" />
     <Compile Include="DTOs\ActorDTO.cs" />
     <Compile Include="DTOs\ActorViewModelDTO.cs" />
     <Compile Include="DTOs\CustomerDTO.cs" />
     <Compile Include="DTOs\MembershipTypeDTO.cs" />
     <Compile Include="DTOs\MovieDTO.cs" />
+    <Compile Include="DTOs\NewRentalDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -340,6 +343,14 @@
     <Compile Include="Migrations\202008261437468_SeedUsers.Designer.cs">
       <DependentUpon>202008261437468_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009091527103_AddRentalsToDb.cs" />
+    <Compile Include="Migrations\202009091527103_AddRentalsToDb.Designer.cs">
+      <DependentUpon>202009091527103_AddRentalsToDb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202009101849436_moviesNumberInStock.cs" />
+    <Compile Include="Migrations\202009101849436_moviesNumberInStock.Designer.cs">
+      <DependentUpon>202009101849436_moviesNumberInStock.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Actor.cs" />
@@ -351,6 +362,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MovieActors.cs" />
     <Compile Include="Models\MovieCustomer.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ActorViewModel.cs" />
@@ -472,16 +484,23 @@
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
     <Content Include="Content\Images\404img.png" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
+    <Content Include="Content\typeahead.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bloodhound.js" />
+    <Content Include="Scripts\bloodhound.min.js" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -557,6 +576,12 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
+    <Content Include="Scripts\typeahead.bundle.js" />
+    <Content Include="Scripts\typeahead.bundle.min.js" />
+    <Content Include="Scripts\typeahead.jquery.js" />
+    <Content Include="Scripts\typeahead.jquery.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -606,6 +631,7 @@
     <Content Include="Views\Actor\UploadImage.cshtml" />
     <Content Include="Views\Movies\UploadPoster.cshtml" />
     <Content Include="Views\Movies\UploadMovie.cshtml" />
+    <Content Include="Views\Rentals\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -729,6 +755,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008261437468_SeedUsers.resx">
       <DependentUpon>202008261437468_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009091527103_AddRentalsToDb.resx">
+      <DependentUpon>202009091527103_AddRentalsToDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009101849436_moviesNumberInStock.resx">
+      <DependentUpon>202009101849436_moviesNumberInStock.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
